css fix
fixed images being too wide in blog posts.

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -47,3 +47,9 @@ p{
   text-wrap: pretty;
   color: var(--callout);
 }
+
+/* images*/
+
+img{
+max-width: 100%;
+}
